# gitas

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: github.rs  main.rs  models.rs  tui.rs  utils.rs
src/commands/: add.rs  git.rs  list.rs  mod.rs
