[package]
name = "gitas"
version = "0.0.4"
edition = "2024"
authors = ["letmutex"]
license = "Apache-2.0"
description = "GitHub Account Switch — manage multiple git identities"
repository = "https://github.com/letmutex/gitas"
homepage = "https://github.com/letmutex/gitas"
documentation = "https://docs.rs/gitas"
keywords = ["git", "github", "account", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "gitas"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
dirs = "6"
open = "5"
keyring = "3"
crossterm = "0.29"
ureq = { version = "3.2", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }
